# Basic_OSS_Architecture

./: .gitignore  .pg-password  Dockerfile  hello.py  pyproject.toml
Basic_OSS/: dbt_project.yml
Basic_OSS/models/: schema.yml  sources.yml
Basic_OSS/models/ingest/: raw.py
Basic_OSS/models/stage/: asteroids.sql
Basic_OSS/models/staging/: asteroids.sql
docs/: _quarto.yml  basic_oss.html  basic_oss.qmd  sample.md
notebooks/: api_exploration.ipynb
scripts/sql/: asteroids_source.sql
