[project]
name = "basic-oss-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.9.1",
    "dbt-duckdb>=1.9.1",
    "dbt-postgres>=1.9.0",
    "duckdb>=1.1.3",
    "fsspec>=2024.10.0",
    "great-expectations>=0.18.22",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "quarto>=0.1.0",
    "requests>=2.32.3",
]